# 3D-Physics-Engine

./: .README.md.swp  .gitignore  README.md  build.sh  dasd
.github/workflows/: cmake-multi-platform.yml
Engine/: CMakeLists.txt  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  Object.cpp  Position.h  main.cpp
Engine/Engine/x64/Debug/: Engine.exe.recipe  vc143.idb
Engine/Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Engine/PhysicsEngine/: .engine.cpp.swp  engine.cpp  engine.h
Engine/Tests/: README.md  engine_tests.cpp  template
Physics-Engine/: Physics-Engine.vcxproj
